--- a/src/components/code/code-css/pages/elem-code-css.html
+++ b/src/components/code/code-css/pages/elem-code-css.html
@@ -1,16 +1,12 @@
 <h1>Справочник по CSS свойствам</h1>
 
-<div class="article article__content">
-  <p>
-    <a href="#" id="css-sel">CSS селекторы</a> 
-  </p>
-</div>
-
+<!-- Заголовок -->
 <div class="article">
-<div class="anchor" id="content"></div>
-<h2>Содержание</h2>
+  <div class="anchor" id="content"></div>
+  <h2>Содержание</h2>
 </div>
 
+<!-- Содержание -->
 <div class="article article__content">
 
   <div>
@@ -100,6 +96,7 @@
 </div>
 
 
+<!-- links -->
 <article class="article">
   <div class="anchor" id="links"></div>
   <h2>links</h2>
@@ -127,8 +124,15 @@
 
 <article class="article">
   <div class="anchor" id="info"></div>
-  <h2>info</h2>
-
+  <h2>Синтаксис CSS</h2>
+  <p>CSS правило</p>
+  <code>h1 { background-color: red; }</code>
+  <p>Селектор определяет элемент, к которому применяются стили</p>
+  <code>h1</code>
+  <p>CSS свойство</p>
+  <code>background-color</code>
+  <p>Значение</p>
+  <code>red</code>  
 </article>
 
 
