--- a/src/components/code/code-js/pages/elem-code-array.html
+++ b/src/components/code/code-js/pages/elem-code-array.html
@@ -25,6 +25,7 @@
   <p><a href="https://developer.mozilla.org/ru/docs/Web/JavaScript/Reference/Global_Objects/Array">developer.mozilla.org/Array</a></p>
   <p><a href="https://learn.javascript.ru/array">learn.javascript.ru/array</a></p>
   <p><a href="https://doka.guide/js/arrays/">doka.guide/js/arrays</a></p>
+  <p><a href="https://jsexpert.net/handbook/javascript/array/">jsexpert.net/handbook/javascript/array</a></p>
   <p><a href="https://metanit.com/web/javascript/5.3.php">metanit.com</a></p>
 </article>
 
@@ -40,8 +41,19 @@
 
   <table>
     <tr>
+      <td>1</td>
+      <th>constructor</th>
+      <td>Возвращает функцию конструктор массива <strong>function Array(){ [native code] }</strong></td>
+    </tr>
+    <tr>
+      <td>2</td>
       <th>length</th>
-      <td>Возвращает число элементов массива</td>
+      <td>Задает или возвращает количество элементов в массиве.</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <th>prototype</th>
+      <td>Возвращает ссылку на объект Array.prototype. Позволяет добавлять новые свойства и методы к объекту Array().</td>
     </tr>
   </table>
 
@@ -60,212 +72,212 @@
   <table>
     <tr>
       <td>1</td>
-      <th><a href="#at-array">at()</a></th>
+      <th><a href="#array-at">at()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>2</td>
-      <th><a href="#concat-array">concat()</a></th>
-      <td></td>
+      <th><a href="#array-concat">concat()</a></th>
+      <td>Возвращает новый массив, содержащий значения объединенных массивов</td>
     </tr>
     <tr>
       <td>3</td>
-      <th><a href="#copy-within-array">copyWithin()</a></th>
+      <th><a href="#array-copy-within">copyWithin()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>4</td>
-      <th><a href="#entries-array">entries()</a></th>
+      <th><a href="#array-entries">entries()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>5</td>
-      <th><a href="#every-array">every()</a></th>
+      <th><a href="#array-every">every()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>6</td>
-      <th><a href="#fill-array">fill()</a></th>
+      <th><a href="#array-fill">fill()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>7</td>
-      <th><a href="#filter-array">filter()</a></th>
+      <th><a href="#array-filter">filter()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>8</td>
-      <th><a href="#find-array">find()</a></th>
+      <th><a href="#array-find">find()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>9</td>
-      <th><a href="#find-index-array">findIndex()</a></th>
+      <th><a href="#array-find-index">findIndex()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>10</td>
-      <th><a href="#find-last-array">findLast()</a></th>
+      <th><a href="#array-find-last">findLast()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>11</td>
-      <th><a href="#find-last-index-array">findLastIndex()</a></th>
+      <th><a href="#array-find-last-index">findLastIndex()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>12</td>
-      <th><a href="#flat-array">flat()</a></th>
+      <th><a href="#array-flat">flat()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>13</td>
-      <th><a href="#flat-map-array">flatMap()</a></th>
+      <th><a href="#array-flat-map">flatMap()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>14</td>
-      <th><a href="#for-each-array">forEach()</a></th>
+      <th><a href="#array-for-each">forEach()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>15</td>
-      <th><a href="#from-array">Array.from()</a></th>
+      <th><a href="#array-from">Array.from()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>16</td>
-      <th><a href="#from-async-array">Array.fromAsync()</a></th>
+      <th><a href="#array-from-async">Array.fromAsync()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>17</td>
-      <th><a href="#includes-array">includes()</a></th>
+      <th><a href="#array-includes">includes()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>18</td>
-      <th><a href="#index-of-array">indexOf()</a></th>
+      <th><a href="#array-index-of">indexOf()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>19</td>
-      <th><a href="#is-array-array">Array.isArray()</a></th>
+      <th><a href="#array-is-array">Array.isArray()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>20</td>
-      <th><a href="#join-array">join()</a></th>
+      <th><a href="#array-join">join()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>21</td>
-      <th><a href="#keys-array">keys()</a></th>
+      <th><a href="#array-keys">keys()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>22</td>
-      <th><a href="#last-index-of-array">lastIndexOf()</a></th>
+      <th><a href="#array-last-index-of">lastIndexOf()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>23</td>
-      <th><a href="#map-array">map()</a></th>
+      <th><a href="#array-map">map()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>24</td>
-      <th><a href="#of-array">Array.of()</a></th>
+      <th><a href="#array-of">Array.of()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>25</td>
-      <th><a href="#pop-array">pop()</a></th>
+      <th><a href="#array-pop">pop()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>26</td>
-      <th><a href="#push-array">push()</a></th>
+      <th><a href="#array-push">push()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>27</td>
-      <th><a href="#reduce-array">reduce()</a></th>
+      <th><a href="#array-reduce">reduce()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>28</td>
-      <th><a href="#reduce-right-array">reduceRight()</a></th>
+      <th><a href="#array-reduce-right">reduceRight()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>29</td>
-      <th><a href="#reverse-array">reverse()</a></th>
+      <th><a href="#array-reverse">reverse()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>30</td>
-      <th><a href="#shift-array">shift()</a></th>
+      <th><a href="#array-shift">shift()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>31</td>
-      <th><a href="#slice-array">slice()</a></th>
+      <th><a href="#array-slice">slice()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>32</td>
-      <th><a href="#some-array">some()</a></th>
+      <th><a href="#array-some">some()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>33</td>
-      <th><a href="#sort-array">sort()</a></th>
+      <th><a href="#array-sort">sort()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>34</td>
-      <th><a href="#splice-array">splice()</a></th>
+      <th><a href="#array-splice">splice()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>35</td>
-      <th><a href="#to-locale-string-array">toLocaleString()</a></th>
+      <th><a href="#array-to-locale-string">toLocaleString()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>36</td>
-      <th><a href="#to-reversed-array">toReversed()</a></th>
+      <th><a href="#array-to-reversed">toReversed()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>37</td>
-      <th><a href="#to-sorted-array">toSorted()</a></th>
+      <th><a href="#array-to-sorted">toSorted()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>38</td>
-      <th><a href="#to-spliced-array">toSpliced()</a></th>
+      <th><a href="#array-to-spliced">toSpliced()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>39</td>
-      <th><a href="#to-string-array">toString()</a></th>
+      <th><a href="#array-to-string">toString()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>40</td>
-      <th><a href="#unshift-array">unshift()</a></th>
+      <th><a href="#array-unshift">unshift()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>41</td>
-      <th><a href="#values-array">values()</a></th>
+      <th><a href="#array-values">values()</a></th>
       <td></td>
     </tr>
     <tr>
       <td>42</td>
-      <th><a href="#with-array">with()</a></th>
+      <th><a href="#array-with">with()</a></th>
       <td></td>
     </tr>
   </table>
@@ -273,145 +285,176 @@
 
 <!-- 1. at() -->
 <article class="article">
-  <div class="anchor" id="at-array"></div>
+  <div class="anchor" id="array-at"></div>
   <h3>Метод At()</h3>
 </article>
 
 <!-- 2. concat() -->
 <article class="article">
-  <div class="anchor" id="concat-array"></div>
+  <div class="anchor" id="array-concat"></div>
   <h3>Метод concat()</h3>
+  <p><em>(<strong>Не изменяет</strong> исходный массив)</em></p>
+  <p><em>(Возвращает <strong>новый массив</strong>)</em></p>
+  <p><em>(Появился в <strong>es1</strong>)</em></p>
+  <p>Метод concat() вызывается на массиве, в качестве аргументов может принимать любые значения. Возвращает новый массив, в которы кладет сперва исходный массив и добавляет после него значения, переданные в аргументах в порядке их появления. При этом у массивов делается поверхностная копия, а объекты передаются по ссылке.</p>
+  <pre>let a = [1, 2];
+let b = ['a', 'b'];
+a.concat(10, 20, 'aa', 'bb', b); // [1, 2, 10, 20, 'aa', 'bb', 'a', 'b']
+let c = [1,2,[3,4],[5,6],7,8];
+a.concat(c); // [1, 2, 1, 2, [3,4], [5,6], 7, 8]
+a.concat(null,true,undefined, {ac:'dc'}); // [1, 2, null, true, undefined, {ac:'dc'}]</pre>
 </article>
 
 <!-- 3. copyWithin() -->
 <article class="article">
-  <div class="anchor" id="copy-within-array"></div>
+  <div class="anchor" id="array-copy-within"></div>
   <h3>Метод copyWithin()</h3>
+  <p><em>(<strong>Изменяет</strong> исходный массив)</em></p>
+  <p><em>(Возвращает <strong>измененный массив</strong>)</em></p>
+  <p><em>(Появился в <strong>es6</strong>)</em></p>
+  <p>Метод copyWithin() копирует элементы внутри массива (начиная с позиции, которая передается вторым необязательным аргументом и до позиции, которая передается третьим необязательным аргументом), в позицию, указанную первым аргументом.</p>
+  <code>array.copyWithin(target, start, end)</code>
+  <p>target	Обязательный. Позиция индекса, куда копировать элементы.</p>
+  <p>start	Необязательный. Позиция индекса для начала копирования элементов (по умолчанию 0)</p>
+  <p>end	Необязательный. Позиция последнего индекса для копирования элементов (по умолчанию — array.length)</p>
+  <code>[1, 2, 3, 4, 5].copyWithin(0, 3); // [4, 5, 3, 4, 5]</code>
+  <code>[1, 2, 3, 4, 5].copyWithin(0, 3, 4); // [4, 2, 3, 4, 5]</code>
+  <code>[1, 2, 3, 4, 5].copyWithin(0, -2, -1); // [4, 2, 3, 4, 5]</code>
 </article>
 
 <!-- 4. entries() -->
 <article class="article">
-  <div class="anchor" id="entries-array"></div>
+  <div class="anchor" id="array-entries"></div>
   <h3>Метод entries()</h3>
+  <p><em>(Появился в <strong>es6</strong>)</em></p>
+  <p>Метод entries() возвращает новый объект итератора массива Array Iterator, содержащий пары ключ / значение для каждого индекса в массиве.</p>
+  <pre>let array = ["one", "two", "three"];
+let iterator = array.entries(); 
+for (let item of iterator) { 
+  console.log( item ); 
+}
+// [0, "one"]
+// [1, "two"]
+// [2, "three"]</pre>
 </article>
 
 <!-- 5. every() -->
 <article class="article">
-  <div class="anchor" id="every-array"></div>
+  <div class="anchor" id="array-every"></div>
   <h3>Метод every()</h3>
 </article>
 
 <!-- 6. fill() -->
 <article class="article">
-  <div class="anchor" id="fill-array"></div>
+  <div class="anchor" id="array-fill"></div>
   <h3>Метод fill()</h3>
 </article>
 
 <!-- 7. filter() -->
 <article class="article">
-  <div class="anchor" id="filter-array"></div>
+  <div class="anchor" id="array-filter"></div>
   <h3>Метод filter()</h3>
 </article>
 
 <!-- 8. find() -->
 <article class="article">
-  <div class="anchor" id="find-array"></div>
+  <div class="anchor" id="array-find"></div>
   <h3>Метод find()</h3>
 </article>
 
 <!-- 9. findIndex() -->
 <article class="article">
-  <div class="anchor" id="find-index-array"></div>
+  <div class="anchor" id="array-find-index"></div>
   <h3>Метод findIndex()</h3>
 </article>
 
 <!-- 10. findLast() -->
 <article class="article">
-  <div class="anchor" id="find-last-array"></div>
+  <div class="anchor" id="array-find-last"></div>
   <h3>Метод findLast()</h3>
 </article>
 
 <!-- 11. findLastIndex() -->
 <article class="article">
-  <div class="anchor" id="find-last-index-array"></div>
+  <div class="anchor" id="array-find-last-index"></div>
   <h3>Метод findLastIndex()</h3>
 </article>
 
 <!-- 12. flat() -->
 <article class="article">
-  <div class="anchor" id="flat-array"></div>
+  <div class="anchor" id="array-flat"></div>
   <h3>Метод flat()</h3>
 </article>
 
 <!-- 13. flatMap() -->
 <article class="article">
-  <div class="anchor" id="flat-map-array"></div>
+  <div class="anchor" id="array-flat-map"></div>
   <h3>Метод flatMap()</h3>
 </article>
 
 <!-- 14. forEach() -->
 <article class="article">
-  <div class="anchor" id="for-each-array"></div>
+  <div class="anchor" id="array-for-each"></div>
   <h3>Метод forEach()</h3>
 </article>
 
 <!-- 15. Array.from() -->
 <article class="article">
-  <div class="anchor" id="from-array"></div>
+  <div class="anchor" id="array-from"></div>
   <h3>Метод Array.from()</h3>
 </article>
 
 <!-- 16. Array.fromAsync() -->
 <article class="article">
-  <div class="anchor" id="from-async-array"></div>
+  <div class="anchor" id="array-from-async"></div>
   <h3>Метод Array.fromAsync()</h3>
 </article>
 
 <!-- 17. includes() -->
 <article class="article">
-  <div class="anchor" id="includes-array"></div>
+  <div class="anchor" id="array-includes"></div>
   <h3>Метод includes()</h3>
 </article>
 
 <!-- 18. indexOf() -->
 <article class="article">
-  <div class="anchor" id="index-of-array"></div>
+  <div class="anchor" id="array-index-of"></div>
   <h3>Метод indexOf()</h3>
 </article>
 
 <!-- 19. Array.isArray() -->
 <article class="article">
-  <div class="anchor" id="is-array-array"></div>
+  <div class="anchor" id="array-is-array"></div>
   <h3>Метод Array.isArray()</h3>
 </article>
 
 <!-- 20. join() -->
 <article class="article">
-  <div class="anchor" id="join-array"></div>
+  <div class="anchor" id="array-join"></div>
   <h3>Метод join()</h3>
 </article>
 
 <!-- 21. keys() -->
 <article class="article">
-  <div class="anchor" id="keys-array"></div>
+  <div class="anchor" id="array-keys"></div>
   <h3>Метод keys()</h3>
 </article>
 
 <!-- 22. lastIndexOf() -->
 <article class="article">
-  <div class="anchor" id="last-index-of-array"></div>
+  <div class="anchor" id="array-last-index-of"></div>
   <h3>Метод lastIndexOf()</h3>
 </article>
 
 <!-- 23. map() -->
 <article class="article">
-  <div class="anchor" id="map-array"></div>
+  <div class="anchor" id="array-map"></div>
   <h3>Метод map()</h3>
 </article>
 
 <!-- 24. Array.of() -->
 <article class="article">
-  <div class="anchor" id="of-array"></div>
+  <div class="anchor" id="array-of"></div>
   <h3>Метод Array.of()</h3>
   <p>Array.of() — статический метод, который создаёт массив из переданных ему аргументов. Array.of() и конструктор массива Array() работают практически одинаково. Разница возникает, если передавать этим функциям один аргумент, причём этот аргумент должен быть числом. В этом случае для конструктора Array() аргумент будет считаться длинной массива, а для Array.of() — первым элементом массива.</p>
   <code>Array.of('🐱', 0b001, document.createElement('div')); // ['🐱', 1, div]
@@ -426,109 +469,109 @@
 
 <!-- 25. pop() -->
 <article class="article">
-  <div class="anchor" id="pop-array"></div>
+  <div class="anchor" id="array-pop"></div>
   <h3>Метод pop()</h3>
 </article>
 
 <!-- 26. push() -->
 <article class="article">
-  <div class="anchor" id="push-array"></div>
+  <div class="anchor" id="array-push"></div>
   <h3>Метод push()</h3>
 </article>
 
 <!-- 27. reduce() -->
 <article class="article">
-  <div class="anchor" id="reduce-array"></div>
+  <div class="anchor" id="array-reduce"></div>
   <h3>Метод reduce()</h3>
 </article>
 
 <!-- 28. reduceRight() -->
 <article class="article">
-  <div class="anchor" id="reduce-right-array"></div>
+  <div class="anchor" id="array-reduce-right"></div>
   <h3>Метод reduceRight()</h3>
 </article>
 
 <!-- 29. reverse() -->
 <article class="article">
-  <div class="anchor" id="reverse-array"></div>
+  <div class="anchor" id="array-reverse"></div>
   <h3>Метод reverse()</h3>
 </article>
 
 <!-- 30. shift() -->
 <article class="article">
-  <div class="anchor" id="shift-array"></div>
+  <div class="anchor" id="array-shift"></div>
   <h3>Метод shift()</h3>
 </article>
 
 <!-- 31. slice() -->
 <article class="article">
-  <div class="anchor" id="slice-array"></div>
+  <div class="anchor" id="array-slice"></div>
   <h3>Метод slice()</h3>
 </article>
 
 <!-- 32. some() -->
 <article class="article">
-  <div class="anchor" id="some-array"></div>
+  <div class="anchor" id="array-some"></div>
   <h3>Метод some()</h3>
 </article>
 
 <!-- 33. sort() -->
 <article class="article">
-  <div class="anchor" id="sort-array"></div>
+  <div class="anchor" id="array-sort"></div>
   <h3>Метод sort()</h3>
 </article>
 
 <!-- 34. splice() -->
 <article class="article">
-  <div class="anchor" id="splice-array"></div>
+  <div class="anchor" id="array-splice"></div>
   <h3>Метод splice()</h3>
 </article>
 
 <!-- 35. toLocaleString() -->
 <article class="article">
-  <div class="anchor" id="to-locale-string-array"></div>
+  <div class="anchor" id="array-to-locale-string"></div>
   <h3>Метод toLocaleString()</h3>
 </article>
 
 <!-- 36. toReversed() -->
 <article class="article">
-  <div class="anchor" id="to-reversed-array"></div>
+  <div class="anchor" id="array-to-reversed"></div>
   <h3>Метод toReversed()</h3>
 </article>
 
 <!-- 37. toSorted() -->
 <article class="article">
-  <div class="anchor" id="to-sorted-array"></div>
+  <div class="anchor" id="array-to-sorted"></div>
   <h3>Метод toSorted()</h3>
 </article>
 
 <!-- 38. toSpliced() -->
 <article class="article">
-  <div class="anchor" id="to-spliced-array"></div>
+  <div class="anchor" id="array-to-spliced"></div>
   <h3>Метод toSpliced()</h3>
 </article>
 
 <!-- 39. toString() -->
 <article class="article">
-  <div class="anchor" id="to-string-array"></div>
+  <div class="anchor" id="array-to-string"></div>
   <h3>Метод toString()</h3>
 </article>
 
 <!-- 40. unshift() -->
 <article class="article">
-  <div class="anchor" id="unshift-array"></div>
+  <div class="anchor" id="array-unshift"></div>
   <h3>Метод unshift()</h3>
 </article>
 
 <!-- 41. values() -->
 <article class="article">
-  <div class="anchor" id="values-array"></div>
+  <div class="anchor" id="array-values"></div>
   <h3>Метод values()</h3>
 </article>
 
 <!-- 42. with() -->
 <article class="article">
-  <div class="anchor" id="with-array"></div>
+  <div class="anchor" id="array-with"></div>
   <h3>Метод with()</h3>
 </article>
 
