--- a/src/components/code/code-markdown/pages/elem-code-markdown.html
+++ b/src/components/code/code-markdown/pages/elem-code-markdown.html
@@ -2,6 +2,8 @@
 
 <article class="article">
 
+  <p><a href="https://www.markdownguide.org/basic-syntax/">markdownguide.org/basic-syntax</a></p>
+
   <ul>
     <li>
       Заголовоки h1-h16 выделяются с помощью решетки #
@@ -40,7 +42,7 @@
       <pre>---</pre>или
       <pre>___</pre>
     </li>
-    
+
     <li>
       <em>Курсивный текст</em>
       <pre>*курсивный текст*</pre>или
@@ -52,13 +54,13 @@
       <pre>**жирный текст**</pre>или
       <pre>__жирный текст__</pre>
     </li>
-    
+
     <li>
       <strong><em>Жирный курсивный текст</em></strong>
       <pre>***жирный курсивный текст***</pre>или
       <pre>__жирный курсивный текст___</pre>
     </li>
-    
+
     <li>
       Зачеркнутый текст
       <code>~~зачеркнутый текст~~</code>
@@ -68,7 +70,7 @@
       Картинка
       <code>![текст тега alt](https://pictures.com/foto.jpg "текст тега title")</code>
     </li>
-    
+
     <li>
       Ссылка
       <pre>[ссылка на гугл](https://google.com)</pre>
@@ -78,50 +80,50 @@
       Картинка-ссылка
       <code>[![текст тега alt](https://pictures.com/foto.jpg "текст тега title")](https://pictures.com)</code>
     </li>
-      
+
     <li>Маркированный список
       <pre>- item
   - item</pre>или
-      <pre>+ item 
+      <pre>+ item
   + item</pre>или
-      <pre>* item 
+      <pre>* item
   * item</pre>
     </li>
-      
+
     <li>Вложенный список
       <pre>- item
     - item</pre>или
-      <pre>+ item 
+      <pre>+ item
     + item </pre>или
-      <pre>* item 
+      <pre>* item
     * item</pre>
     </li>
-      
+
     <li>Нумерованный список (любые цифры)
       <pre>1. item
   1. item
     1. item
     1. item</pre>
     </li>
-      
+
     <li>Цитаты
       <pre>> text
   > text
   > text</pre>
     </li>
-      
+
     <li>Исходный код пишут с помощью обратных кавычек. Инлайн код выделяют одиночными обратными кавычками. Блок кода - тройными
   <pre>\`let a = 5;\`</pre>
   <pre>\`\`\`let a = 5;
   let b = a +5;\`\`\`</pre>
     </li>
-      
+
     <li>Сноски
       <pre>Сноска первая [^1] и сноска вторая [^2]
   [^1]: Текст сноски 1
   [^2]: Текст сноски 2</pre>
     </li>
-      
+
     <li>Таблица. Для таблиц используют вертикальную черту и дефис
       <pre>цвет | rgb | hex
   :----|:----:|------:
