--- a/src/components/front/front-base/pages/elem-base-algorithm.html
+++ b/src/components/front/front-base/pages/elem-base-algorithm.html
@@ -1,120 +1,83 @@
 <h1>Алгоритмы</h1>
 
+<!-- Заголовок -->
+<div class="article">
+  <div class="anchor" id="content"></div>
+  <h2>Содержание</h2>
+</div>
 
-<div class="content__menu">
-  <p class="content__menu-link" id="content__menu-link1">Links</p>
-  <p class="content__menu-link" id="content__menu-link2">Сложность</p>
-  <p class="content__menu-link" id="content__menu-link3">Сортировка</p>
-  <p class="content__menu-link" id="content__menu-link4">Поиск</p>
+<!-- Содержание -->
+<div class="article article__content">
+
+  <div>
+    <p><a href="#about">О алгоритмах</a></p>
+    <p><a href="#links">Links</a></p>
+    <p><a href="#bigo">Сложность</a></p>
+    <p><a href="#sort">Сортировка</a></p>
+    <p><a href="#search">Поиск</a></p>
+    </div>
+
 </div>
 
 
-<div class="content__items">
+<!-- about -->
+<article class="article">
+  <div class="anchor" id="about"></div>
+  <h2>О алгоритмах</h2>
+</article>
 
 
-  <div class="content__item" id="content__item1">
-    <h2>Links</h2>
-    <ul>
-      <li>
-        <a href="https://teach-in.ru/course/algorithms">teach-in.ru/course/algorithms</a>
-        Лекции преподавателей МГУ
-      </li>
-      <li>
-        <a href="hhttps://education.yandex.ru/handbook/algorithms">education.yandex.ru/handbook/algorithms</a>
-        Яндеск образование. Основы алгоритмов
-      </li>
-      <li>
-        <a
-          href="https://education.yandex.ru/journal/osnovnye-vidy-sortirovok-i-primery-ikh-realizatsii">education.yandex.ru</a>
-        Основные виды сортировок и примеры их реализации (Илья Шишков 2020-01-16)
-      </li>
-      <li>
-        <a
-          href="https://education.yandex.ru/knowledge/algoritmy">education.yandex.ru</a>
-        Алгоритмы (Илья Волков 2020-04-24)
-      </li>
-      <li>
-        <a href="https://bimlibik.github.io/posts/complexity-of-algorithms/">bimlibik.github.io</a>
-        Сложность алгоритмов. Big O. Основы. (2020-10-29)
-      </li>
-      <li>
-        <a href="https://thecode.media/sort/">thecode.media</a> Зачем нужна сортировка в программировании (2021-06-30)
-      </li>
-      <li>
-        <a href="https://dzen.ru/a/ZEpeLTjDQ28UUYOp">dzen.ru</a> Алгоритмы программирования: применение и сложность O(n)
-        (2023-04-27)
-      </li>
-    </ul>
+<!-- links -->
+<article class="article">
+  <div class="anchor" id="links"></div>
+  <h2>Links</h2>
 
-    <h3>Статьи на habr</h3>
-    <ul>
-      <li>
-        <a href="https://habr.com/ru/articles/204600/">Пузырьковая сортировка и все-все-все</a> (velemak 2013-12-03)
-      </li>
-    </ul>
-  </div>
+  <p><a href="https://teach-in.ru/course/algorithms">teach-in.ru/course/algorithms</a> Лекции преподавателей МГУ</p>
+  <p><a href="hhttps://education.yandex.ru/handbook/algorithms">education.yandex.ru/handbook/algorithms</a> Яндеск образование. Основы алгоритмов</p>      
+  <p><a href="https://education.yandex.ru/journal/osnovnye-vidy-sortirovok-i-primery-ikh-realizatsii">education.yandex.ru</a> Основные виды сортировок и примеры их реализации (Илья Шишков 2020-01-16)</p>
+  <p><a href="https://education.yandex.ru/knowledge/algoritmy">education.yandex.ru</a> Алгоритмы (Илья Волков 2020-04-24)</p>
+  <p><a href="https://bimlibik.github.io/posts/complexity-of-algorithms/">bimlibik.github.io</a> Сложность алгоритмов. Big O. Основы. (2020-10-29)</p>
+  <p><a href="https://thecode.media/sort/">thecode.media</a> Зачем нужна сортировка в программировании (2021-06-30)</p>
+  <p><a href="https://dzen.ru/a/ZEpeLTjDQ28UUYOp">dzen.ru</a> Алгоритмы программирования: применение и сложность O(n) (2023-04-27)</p>
+
+  <h3>Статьи на habr</h3>
+  <p><a href="https://habr.com/ru/articles/204600/">Пузырьковая сортировка и все-все-все</a> (velemak 2013-12-03)</p>
+</article>
 
 
-  <div class="content__item" id="content__item2">
-    <h2>Сложность</h2>
-  </div>
+<!-- bigo -->
+<article class="article">
+  <div class="anchor" id="bigo"></div>
+  <h2>Сложность</h2>
+</article>
 
 
-  <div class="content__item" id="content__item3">
-    <h2>Сортировка</h2>
+<!-- sort -->
+<article class="article">
+  <div class="anchor" id="sort"></div>
+  <h2>Сортировка</h2>
 
-    <ul>
+  <h3>1. Сортировка пузырьком</h3>
+  <p>Сортировка пузырьком — один из самых известных алгоритмов сортировки. Здесь нужно последовательно сравнивать значения соседних элементов и менять числа местами, если предыдущее оказывается больше последующего. Таким образом элементы с большими значениями оказываются в конце списка, а с меньшими остаются в начале.</p>      
+  <p>Этот алгоритм считается учебным и почти не применяется на практике из-за низкой эффективности: он медленно работает на тестах, в которых маленькие элементы (их называют «черепахами») стоят в конце массива. Однако на нём основаны многие другие методы, например, шейкерная сортировка и сортировка расчёской.</p>
 
-      <li>
-        <h3>Сортировка пузырьком</h3>
-        Сортировка пузырьком — один из самых известных алгоритмов сортировки. Здесь нужно последовательно сравнивать
-        значения соседних элементов и менять числа местами, если предыдущее оказывается больше последующего. Таким
-        образом элементы с большими значениями оказываются в конце списка, а с меньшими остаются в начале.
+  <h3>2. Сортировка перемешиванием (шейкерная сортировка)</h3>
+  <p>Шейкерная сортировка отличается от пузырьковой тем, что она двунаправленная: алгоритм перемещается не строго слева направо, а сначала слева направо, затем справа налево.</p>      
 
-        Этот алгоритм считается учебным и почти не применяется на практике из-за низкой эффективности: он медленно
-        работает на тестах, в которых маленькие элементы (их называют «черепахами») стоят в конце массива. Однако на нём
-        основаны многие другие методы, например, шейкерная сортировка и сортировка расчёской.
-      </li>
+  <h3>3. Сортировка расчёской</h3>
+  <p>Сортировка расчёской — улучшение сортировки пузырьком. Её идея состоит в том, чтобы «устранить» элементы с небольшими значения в конце массива, которые замедляют работу алгоритма. Если при пузырьковой и шейкерной сортировках при переборе массива сравниваются соседние элементы, то при «расчёсывании» сначала берётся достаточно большое расстояние между сравниваемыми значениями, а потом оно сужается вплоть до минимального.</p>      
+  <p>Первоначальный разрыв нужно выбирать не случайным образом, а с учётом специальной величины — фактора уменьшения, оптимальное значение которого равно 1,247. Сначала расстояние между элементами будет равняться размеру массива, поделённому на 1,247; на каждом последующем шаге расстояние будет снова делиться на фактор уменьшения — и так до окончания работы алгоритма.</p>
 
+  <h3>4. Сортировка вставками</h3>
+   <p>При сортировке вставками массив постепенно перебирается слева направо. При этом каждый последующий элемент размещается так, чтобы он оказался между ближайшими элементами с минимальным и максимальным значением.</p>     
 
-      <li>
-        <h3>Сортировка перемешиванием (шейкерная сортировка)</h3>
-        Шейкерная сортировка отличается от пузырьковой тем, что она двунаправленная: алгоритм перемещается не строго
-        слева направо, а сначала слева направо, затем справа налево.
-      </li>
-
-      <li>
-        <h3>Сортировка расчёской</h3>
-        Сортировка расчёской — улучшение сортировки пузырьком. Её идея состоит в том, чтобы «устранить» элементы с
-        небольшими значения в конце массива, которые замедляют работу алгоритма. Если при пузырьковой и шейкерной
-        сортировках при переборе массива сравниваются соседние элементы, то при «расчёсывании» сначала берётся
-        достаточно большое расстояние между сравниваемыми значениями, а потом оно сужается вплоть до минимального.
-
-        Первоначальный разрыв нужно выбирать не случайным образом, а с учётом специальной величины — фактора уменьшения,
-        оптимальное значение которого равно 1,247. Сначала расстояние между элементами будет равняться размеру массива,
-        поделённому на 1,247; на каждом последующем шаге расстояние будет снова делиться на фактор уменьшения — и так до
-        окончания работы алгоритма.
-      </li>
-
-      <li>
-        <h3>Сортировка вставками</h3>
-        При сортировке вставками массив постепенно перебирается слева направо. При этом каждый последующий элемент
-        размещается так, чтобы он оказался между ближайшими элементами с минимальным и максимальным значением.
-      </li>
-
-      <li>
-        <h3>Сортировка выбором</h3>
-        Сначала нужно рассмотреть подмножество массива и найти в нём максимум (или минимум). Затем выбранное значение
-        меняют местами со значением первого неотсортированного элемента. Этот шаг нужно повторять до тех пор, пока в
-        массиве не закончатся неотсортированные подмассивы.
-      </li>
-    </ul>
-  </div>
+  <h3>5. Сортировка выбором</h3>
+  <p>Сначала нужно рассмотреть подмножество массива и найти в нём максимум (или минимум). Затем выбранное значение меняют местами со значением первого неотсортированного элемента. Этот шаг нужно повторять до тех пор, пока в массиве не закончатся неотсортированные подмассивы.</p>      
+</article>
 
 
-  <div class="content__item" id="content__item4">
-    <h2>Поиск</h2>
-  </div>
-
-
-</div>
+<!-- sort -->
+<article class="article">
+  <div class="anchor" id="sort"></div>
+  <h2>Поиск</h2>
+</article>
