--- a/src/components/front/front-edu/pages/elem-edu-rss2022-stage0.html
+++ b/src/components/front/front-edu/pages/elem-edu-rss2022-stage0.html
@@ -21,6 +21,7 @@
     <a href="#week9" class="contents__link">Week 9</a>
     <a href="#week10" class="contents__link">Week 10</a>
     <a href="#week11" class="contents__link">Week 11</a>
+    <a href="#certificate" class="contents__link">certificate</a>
   </div>
 </div>
 
@@ -226,4 +227,13 @@
       <strong>2022-02-22 вт </strong>Self-studying Подготовительный курс. Неделя #11<br><strong>2022-02-24 чт </strong>Online Lecture Q&A Session
     </li>
   </ul>
+</article>
+
+
+<!-- certificate -->
+<article class="article">
+  <div class="anchor" id="certificate"></div>
+  <h2>Я закончил на позиции 140 и получил certificate</h2>
+
+  <p><img src="./../../../../assets/certificate2022rss.png" alt="certificate" class="certificate"></p>
 </article>
