--- a/src/components/front/front-edu/pages/elem-edu-rss2023-stage0.html
+++ b/src/components/front/front-edu/pages/elem-edu-rss2023-stage0.html
@@ -1,6 +1,6 @@
 <h1>The Rolling Scopes School
 <br>Javascript Frontend 2023Q2 Stage 0
-<br>26 июня 2023 - 25 сентября 2023</h1>
+<br>26 июня 2023 - 30 октября 2023</h1>
 
 <!-- Заголовок -->
 <div class="article">
@@ -28,6 +28,7 @@
     <a href="#week16" class="contents__link">Week 16</a>
     <a href="#week17" class="contents__link">Week 17</a>
     <a href="#week18" class="contents__link">Week 18</a>
+    <a href="#certificate" class="contents__link">certificate</a>
   </div>
 </div>
 
@@ -487,4 +488,13 @@
       <h4>Получение сертификата</h4>
     </li>
   </ul>
+</article>
+
+
+<!-- certificate -->
+<article class="article">
+  <div class="anchor" id="certificate"></div>
+  <h2>Я закончил на позиции 1 и получил certificate</h2>
+
+  <p><img src="./../../../../assets/certificate2023rss.png" alt="certificate" class="certificate"></p>
 </article>
