--- a/src/components/front/front-edu/pages/elem-edu-rss2024-stage2.html
+++ b/src/components/front/front-edu/pages/elem-edu-rss2024-stage2.html
@@ -28,7 +28,7 @@
 
 <article class="article">
   <div class="anchor" id="stage2"></div>
-  <a href="https://github.com/rolling-scopes-school/tasks/tree/master/stage1">Программа stage2</a>
+  <a href="https://github.com/rolling-scopes-school/tasks/tree/master/stage2">Программа stage2</a>
 
   <ul>
     <li>To enroll, students must successfully complete the tasks of the first stage and pass an interview with a mentor</li>
@@ -44,7 +44,7 @@
     <li>Training time: 14 weeks</li>
     <li>Format: Self-study + webinars + communication on Discord. Practical lessons are checked and evaluated by a mentor and during cross-checks.</li>
     <li>Training interviews are held with different mentors during the course.</li>
-  </ul>   
+  </ul>
 </article>
 
 
@@ -132,7 +132,50 @@
     <li>- ESLinter is configured for TypeScript (the typescript-eslint/recommended plugin is used) and there are no errors</li>
     <li>- The TypeScript configuration file has the flags "noImplicitAny": true and "strict": true</li>
     <li>- webpack is configured and works with TypeScript</li>
-  </ul>    
+  </ul>
+</article>
+
+
+<!-- Week 3 -->
+<article class="article">
+  <div class="anchor" id="week3"></div>
+  <h3>Неделя #3 (27 февраля 2024)</h3>
+  <ul>
+    <li>Cross-Check Reviews:
+      <ul>
+        <li>Cross-check of the TypeScript Essentials</li>
+      </ul>
+    </li>
+    <li>Modules:
+      <ul>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/code-review">Module: Code review</a>
+        </li>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/single-page-application">Module: SPA</a>
+        </li>
+      </ul>
+    </li>
+    <li>Tasks:
+      <ul>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/tasks/code-review">Code review</a>
+        </li>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/technical-screening">Interview with mentor</a>
+        </li>
+         <li>
+          <a href="https://github.com/rolling-scopes-school/core-js-dates">core-js-dates</a>
+        </li>
+     </ul>
+    </li>
+    <li>Tests:
+      <ul>
+        <li>[St2] Single Page Application</li>
+        <li>[St2] Code review</li>
+      </ul>
+    </li>
+  </ul>
 </article>
 
 
@@ -149,3 +192,10 @@
     <li><a href="https://www.youtube.com/watch?v=gieEQFIfgYc">TypeScript Full Course for Beginners</a></li>
   </ul>
   <hr>
+  <h3>Week 2</h3>
+  <ul>
+    <li><a href="https://www.youtube.com/playlist?list=PL4cUxeGkcC9hOkGbwzgYFmaxB0WiduYJC">Webpack & TypeScript Setup - [1 hour]</a></li>
+    <li><a href="https://www.youtube.com/watch?v=Fgcu_iB2X04">Utility Types - Advanced TypeScript - [35 min]</a></li>
+  </ul>
+  <hr>
+</article>
