--- a/src/components/front/front-learned/pages/elem-learned-books.html
+++ b/src/components/front/front-learned/pages/elem-learned-books.html
@@ -38,7 +38,7 @@
     </p>
   </li>
   <li class="yellow">2021-09-27 пн
-    <p><strong>[2018] jQuery для начинающих</strong><br>Антон Шевчук<br>269 стр</p>
+    <p><strong>[2016] jQuery для начинающих</strong><br>Антон Шевчук<br>156 стр</p>
   </li>
   <li class="yellow">2021-10-01 пт
     <p><strong>[2015] HeadFirst Программирование на JavaScript</strong><br>Эрик Фримен, Элизабет Робсон<br>640 стр</p>
@@ -52,17 +52,17 @@
   <li class="yellow">2021-12-18 сб
     <p><strong>[2011] HTML Самоучитель (2-е изд)</strong><br>Н. Комолова, Е. Яковлева<br>288 стр</p>
   </li>
-  <li class="yellow">2022-05-12 чт
-    <p><strong>[2012] HeadFirst JavaScript</strong><br>Майкл Моррисон<br>592 стр</p>
+  <li class="yellow">2022-02-04 чт
+    <p><strong>[2016] Разработка игр на языке JavaScript</strong><br>Сергей Беляев<br>128 стр</p>
+  </li>
+  <li class="yellow">2022-05-24 вт
+    <p><strong>[2012] HeadFirst JavaScript</strong><br>Майкл Моррисон<br>608 стр</p>
   </li>
   <li class="yellow">2022-05-24 вт
     <p><strong>[2021] Справочник Javascript</strong><br>Никольский<br>306 стр</p>
   </li>
   <li class="list-item yellow">2022-05-31 вт
     <p><strong>[2012] Web-программирование JavaScript</strong><br>Зудилова, Буркова<br>68 стр</p>
-  </li>
-  <li class="list-item yellow">2022-06-02 чт
-    <p><strong>[2016] Разработка игр на языке JavaScript (1е)</strong><br>Беляев<br>128 стр</p>
   </li>
   <li class="list-item yellow">2022-06-06 пн
     <p><strong>[2016] Основы JavaScript</strong><br>ИНТУИТ<br>185 стр</p>
@@ -76,5 +76,8 @@
   <li class="list-item yellow">2023-03-18 сб
     <p><strong>[2016] Введение в ECMAScript 6</strong><br>Нараян Прасти<br>178 стр<br>( Learning ESMAScript 6 (eng) -
       Narayan Prusty )</p>
+  </li>
+  <li class="list-item yellow">2023-12-28 чт
+    <p><strong>[2000] Практические занятия по JavaScript</strong><br>Николенко<br>129 стр</p>
   </li>
 </ol>
