--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -54,6 +54,9 @@
     <li><a href="rs-test/rs-test-classes.html" class="js-rs-test">Classes & Prototypes</a> (96 из 100)</li>
     <li><a href="rs-test/rs-test-oop.html" class="js-rs-test">OOP Test</a> (95 из 100)</li>
     <li><a href="rs-test/rs-test-final.html" class="js-rs-test">Final test stage#1</a> (91 из 100)</li>
+    <hr>
+    <li><a href="rs-test/rs-test-tsbasics.html" class="js-rs-test">[St2] TypeScript Basics</a> (88 из 100)</li>
+    <li><a href="rs-test/rs-test-tsadvanced.html" class="js-rs-test">[St2] TypeScript Advanced</a> (0 из 100)</li>
   </ol>
 </article>
 
