--- a/src/components/front/front-edu/pages/elem-edu-rss2023-stage1.html
+++ b/src/components/front/front-edu/pages/elem-edu-rss2023-stage1.html
@@ -1,6 +1,6 @@
 <h1>The Rolling Scopes School
 <br>Курс JS Frontend разработка Stage1
-<br>5 ноября 2023 - 31 мая 2024</h1>
+<br>5 ноября 2023 - 12 февраля 2024</h1>
 
 <!-- Заголовок -->
 <div class="article">
@@ -536,7 +536,7 @@
       <ul>
         <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/classes-prototypes">[St1] Classes & Prototypes</a></li>
         <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/classes-prototypes">[St1] OOP Test</a></li>
-        <li><a href="https://github.com/rolling-scopes-school/tasks/tree/master/stage1">[St1] Final test stage#1</a></li>        
+        <li><a href="https://github.com/rolling-scopes-school/tasks/tree/master/stage1">[St1] Final test stage#1</a></li>
       </ul>
     </li>
   </ul>
